Trying to fix scrollbars on nav

--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -157,6 +157,12 @@ $header-height: 12rem;
             justify-content: center;
             align-items: center;
             line-height: 1.1rem;
+            br {
+                content: none;
+                &::after {
+                    content: none;
+                }
+            }
             svg {
                 width: 1rem;
                 margin: 0 .75rem 0 0 ;
@@ -212,6 +218,21 @@ $header-height: 12rem;
     }
     nav {
         grid-area: nav;
+        overflow-y: scroll;
+        &::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+            border-radius: 1rem;
+            background-color: #F5F5F5;
+        }
+        &::-webkit-scrollbar {
+            width: 1rem;
+            background-color: #F5F5F5;
+        }
+        &::-webkit-scrollbar-thumb {
+            border-radius: 1rem;
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+            background-color: #555;
+        }
         .nav--toggle {
             width: 100%;
             height: 100%;
@@ -498,6 +519,7 @@ $header-height: 12rem;
         "company search user"
         "dashboardQuote mainContent mainContent"
         "nav mainContent mainContent";
+        transition: $transition-500;
         .company {
             grid-area: company;
             width: 100%;
@@ -515,6 +537,33 @@ $header-height: 12rem;
             &--switch {
                 justify-content: flex-end;
                 align-items: center;
+            }
+        }
+        &.largeCompanyCardLayout {
+            grid-template-rows: 5rem 15rem 10rem 1fr;
+            grid-template-areas:
+            "company search user"
+            "company mainContent mainContent"
+            "dashboardQuote mainContent mainContent"
+            "nav mainContent mainContent";
+            transition: $transition-500;
+            .company {
+                grid-template-columns: 1fr 2rem;
+                grid-template-rows: 1fr 2rem;
+                grid-template-areas:
+                "company--logo company--logo"
+                "company--name company--switch";
+                &--name {
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                    padding: 0 0 0 1rem;
+                }
+                &--switch {
+                    flex-direction: row;
+                    align-items: center;
+                    padding: 0 1rem 0 0;
+                }
             }
         }
         .search {
@@ -626,7 +675,14 @@ $header-height: 12rem;
             flex-direction: column;
             font-size: .85rem;
             .dashboard, .quote {
+                white-space: nowrap;
                 padding: 0rem;
+                br {
+                    content: ' ';
+                    &::after {
+                        content: ' ';
+                    }
+                }
             }
             .quote--small {
                 display: none;
